tests/reference/asr-test_assign6-05cd64f.stderr
semantic error: 'str' object does not support item assignment
 --> tests/errors/test_assign6.py:4:5
  |
4 |     s[0] = 'f'
  |     ^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
